# pytorch_module_hook_eample

./: .gitignore  README.md  main.py  pyproject.toml
example/: bloom.py  opt.py
rotch_model_info_collector/: module_collector.py  tools.py
torch_model_info_collector/: module_collector.py  runtime.py
